demo-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: demo
