demo-app/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: demo-app
  namespace: default
spec:
  routes:
    - kind: Rule
      match: Host(`thesis.iulia.live`) && PathPrefix(`/demo`)
      priority: 10
      services:
        - name: demo-service
          port: 80
      middlewares:
        - name: demo-stripprefix    
  tls:
    certResolver: le
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: demo-stripprefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /demo
